fixed scrollbar problem in dropdown

--- a/src/app/components/addtask/addtask.component.scss
+++ b/src/app/components/addtask/addtask.component.scss
@@ -159,7 +159,7 @@
 
 .selection {
     height: 2rem;
-    width: 350px;
+    width: 100%;
 }
 
 .subtask-row {
